# wxapp-server

./: .gitignore  Cargo.toml  README.md  pom.xml  wxapp.conf
root/: hello.html
src/: constants.rs  main.rs  utils.rs
src/main/java/org/umdCssa/: HelloWorld.java
